--- a/css/estiloscss.css
+++ b/css/estiloscss.css
@@ -14,6 +14,11 @@
 $bgcolor1:#fac0d4 ;
 $bgcolor2:#b7dcfa ;
 */
+.colornavfooter {
+  background-color: rgb(19, 150, 211);
+  color: white;
+}
+
 body {
   font-family: "Ubuntu", sans-serif;
   overflow-x: hidden;
@@ -45,15 +50,16 @@ body {
 
 /*Desde aqui se modifica el tamaño de las letras H1 h2 p*/
 div h1 {
-  font-size: 5vw;
+  font-size: 40px;
   text-align: center;
 }
 div p {
-  font-size: 2.4vw;
+  font-size: 20px;
   text-align: center;
+  width: 99%;
 }
 div h2 {
-  font-size: 2.8vw;
+  font-size: 25px;
   text-align: center;
 }
 
@@ -64,7 +70,7 @@ div h2 {
 
 /*Color de fondo del h2*/
 .colorh2 {
-  background-color: #fc9dbe;
+  background-color: #faa8c5;
 }
 
 a {
@@ -171,7 +177,7 @@ footer div a {
 .gridhijo1 {
   display: flex;
   flex-wrap: wrap;
-  background: linear-gradient(to top, #ffffff, #fc9dbe);
+  background: linear-gradient(to top, #ffffff, #faa8c5);
   justify-content: center;
 }
 .gridhijo1 h1 {
@@ -213,7 +219,7 @@ footer div a {
   background: linear-gradient(to left, #ffffff, #b7dcfa);
 }
 .contenedorropa1:hover {
-  background: linear-gradient(to left, #ffffff, #fc9dbe);
+  background: linear-gradient(to left, #ffffff, #faa8c5);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
@@ -224,17 +230,17 @@ footer div a {
   width: 50%;
 }
 .contenedortops button {
-  width: 10vw;
+  width: 9vw;
   height: 5vw;
   margin-left: 1vw;
-  background-color: #fc9dbe;
+  background-color: #faa8c5;
   border-color: #ffffff;
   border-radius: 10px;
 }
 .contenedortops button a {
   color: rgb(0, 0, 0);
   margin: 0;
-  font-size: 2.5vw;
+  font-size: 20px;
 }
 .contenedortops button:hover {
   background-color: #b7dcfa;
@@ -250,83 +256,46 @@ footer div a {
 
 /*Le coloco color de fonto al titulo de tops en la seccion tops*/
 .colorfondotitulotop {
-  background-color: #fc9dbe;
-}
-
-/*Le coloco color de fonto al titulo de joggers en la seccion joggers*/
-.colorfondotitulojogger {
-  background-color: #b7dcfa;
-}
-
-/*Le daré aqui estilo a las imagenes de los tops de ropa*/
-/*Contenedor con un color de fondo asignado a los tops de ropa*/
-.contenedortopsbackgroundcolor {
-  background-color: #f7f7f7;
-  /* blanco */
-  background-image: radial-gradient(circle at 20% 50%, #b8e0e9, #b8e0e9 60%, rgba(248, 165, 194, 0.5) 70%, rgba(248, 165, 194, 0.1));
-  /* gradiente radial */
-  padding: 3vw;
-}
-
-/*Contenedor con un color de fondo asignado a los pantalones de ropa*/
-.contenedorpantalonbackgroundcolor {
-  background-color: #fc9dbe;
-  /* rosa claro */
-  background-image: radial-gradient(circle at 20% 50%, rgba(184, 224, 233, 0.1), rgba(184, 224, 233, 0.5) 60%, #b8e0e9 70%, #b8e0e9);
-  /* gradiente radial */
-  padding: 3vw;
+  background-color: #faa8c5;
 }
 
 /*Clase contenedor que da el borde inferior azul*/
 .contenedormainbordeinferior1 {
-  border-bottom: 50px solid #b7dcfa;
+  border-bottom: 50px solid rgb(19, 150, 211);
 }
 
 .contenedormainbordeinferior2 {
   padding-bottom: 5rem;
-  border-bottom: 50px solid #fc9dbe;
+  border-bottom: 50px solid #faa8c5;
 }
 
 /*Voy a crear la tarjeta para articulos*/
+/*Crear una clase para agrupar los objetos en un div de articulos*/
+.agrupar {
+  height: 200px;
+}
+
 /*Boton de articulos*/
 .boton {
   width: 10vw;
   height: 5vw;
   margin-left: 1vw;
-  background-color: #fc9dbe;
+  background-color: #faa8c5;
   border-color: #ffffff;
   border-radius: 10px;
 }
 .boton a {
   color: rgb(0, 0, 0);
   margin: 0;
-  font-size: 2.5vw;
+  font-size: 25px;
 }
 .boton:hover {
   background-color: #b7dcfa;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
 }
 
-.boton2 {
-  width: 10vw;
-  height: 5vw;
-  margin-left: 1vw;
-  background-color: #b7dcfa;
-  border-color: #ffffff;
-  border-radius: 10px;
-}
-.boton2 a {
-  color: rgb(0, 0, 0);
-  margin: 0;
-  font-size: 2.5vw;
-}
-.boton2:hover {
-  background-color: #fc9dbe;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-}
-
 .listaarticulos {
-  font-size: 2vw;
+  font-size: 20px;
 }
 
 .tarjetaarticulos {
@@ -346,9 +315,9 @@ footer div a {
   left: 53%;
   z-index: 1;
   color: rgba(0, 0, 0, 0.699);
-  background-color: #fc9dbe;
+  background-color: #faa8c5;
   padding: 10px;
-  border: 2px solid #fc9dbe;
+  border: 2px solid #faa8c5;
   /* Agrega un borde blanco alrededor del elemento h2 */
 }
 .bloqueimghorizontal .h2horizontal2 {
@@ -367,6 +336,10 @@ footer div a {
   object-fit: contain;
 }
 
+.divisioncrecimiento {
+  width: 33%;
+}
+
 /*Estilos de clases*/
 /*Aqui defino el estilo para sobresalir letras en el slider*/
 .sobresalir {
@@ -381,45 +354,12 @@ footer div a {
 /*Estilos para los bloques que componen la pagina clases*/
 /*Extend de los bloques horizontales clases*/
 .bloqueimghorizontal6, .bloqueimghorizontal5, .bloqueimghorizontal4 {
-  display: inline-block;
-  position: relative;
+  display: flex;
   width: 100%;
   height: 500px;
   background-size: cover;
 }
 
-/*Extend para texto dentro del imghorizontal clases*/
-.bloqueimghorizontal6 .h2horizontal, .bloqueimghorizontal5 .h2horizontal, .bloqueimghorizontal4 .h2horizontal {
-  position: absolute;
-  z-index: 1;
-  color: rgba(0, 0, 0, 0.699);
-  background-color: #fc9dbe;
-  padding: 10px;
-  border: 2px solid #fc9dbe;
-}
-
-/*Extende para los p2 dentro del imghorizontal clases*/
-.bloqueimghorizontal6 .p2horizontal, .bloqueimghorizontal5 .p2horizontal, .bloqueimghorizontal4 .p2horizontal {
-  position: absolute;
-  z-index: 1;
-  color: rgba(0, 0, 0, 0.699);
-  padding: 10px;
-  width: 400px;
-  bottom: 20%;
-  left: 60%;
-}
-
-/*Extend para las imagenes dentro de imghoriaontal clases*/
-.bloqueimghorizontal6 .imghorizontal2, .bloqueimghorizontal6 .imghorizontal, .bloqueimghorizontal5 .imghorizontal2, .bloqueimghorizontal5 .imghorizontal, .bloqueimghorizontal4 .imghorizontal2, .bloqueimghorizontal4 .imghorizontal {
-  position: absolute;
-  z-index: 1;
-  color: rgba(0, 0, 0, 0.699);
-  padding: 10px;
-  width: 30%;
-  border-radius: 50%;
-}
-
-/*Mixin de posiciones relativas bottom left*/
 .bloqueimghorizontal2 {
   width: 100%;
   height: auto;
@@ -438,54 +378,105 @@ footer div a {
 }
 
 .bloqueimghorizontal4 {
+  align-items: center;
+  justify-content: center;
   background-image: url("../multimedia/imagenes/clases/fondocolor3.jpg");
 }
-.bloqueimghorizontal4 .h2horizontal {
-  bottom: 66%;
-  left: 67%;
+.bloqueimghorizontal4 .divimghorizontal {
+  display: flex;
+  width: 60%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+}
+.bloqueimghorizontal4 .divimghorizontal2 {
+  display: flex;
+  width: 40%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.bloqueimghorizontal4 a {
+  color: #212529;
 }
 .bloqueimghorizontal4 .imghorizontal {
-  bottom: 10%;
-  left: 26%;
+  border-radius: 50%;
+  width: 50%;
+  position: relative;
+  left: 10%;
 }
 .bloqueimghorizontal4 .imghorizontal2 {
-  bottom: 31%;
-  left: 6%;
+  border-radius: 50%;
+  width: 50%;
 }
 
 .bloqueimghorizontal5 {
+  align-items: center;
+  justify-content: center;
   background-image: url("../multimedia/imagenes/clases/fondocolor4.jpg");
 }
-.bloqueimghorizontal5 .h2horizontal {
-  bottom: 66%;
-  left: 67%;
+.bloqueimghorizontal5 .divimghorizontal {
+  display: flex;
+  width: 60%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+}
+.bloqueimghorizontal5 .divimghorizontal2 {
+  display: flex;
+  width: 40%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.bloqueimghorizontal5 a {
+  color: #212529;
 }
 .bloqueimghorizontal5 .imghorizontal {
-  bottom: 10%;
-  left: 26%;
+  border-radius: 50%;
+  width: 50%;
+  position: relative;
+  left: 10%;
 }
 .bloqueimghorizontal5 .imghorizontal2 {
-  bottom: 31%;
-  left: 6%;
-  bottom: 31%;
-  left: 6%;
+  border-radius: 50%;
+  width: 40%;
 }
 
 .bloqueimghorizontal6 {
+  align-items: center;
+  justify-content: center;
   background-image: url("../multimedia/imagenes/clases/fondocolor5.jpg");
 }
-.bloqueimghorizontal6 .h2horizontal {
-  bottom: 66%;
-  left: 67%;
+.bloqueimghorizontal6 .divimghorizontal {
+  display: flex;
+  width: 60%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+}
+.bloqueimghorizontal6 .divimghorizontal2 {
+  display: flex;
+  width: 40%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.bloqueimghorizontal6 a {
+  color: #212529;
 }
 .bloqueimghorizontal6 .imghorizontal {
-  bottom: 2%;
-  left: 26%;
+  border-radius: 50%;
+  width: 50%;
+  position: relative;
+  left: 10%;
 }
 .bloqueimghorizontal6 .imghorizontal2 {
-  bottom: 20%;
-  left: 6%;
-  bottom: 20%;
+  border-radius: 50%;
+  width: 50%;
 }
 
 /*media queries*/
@@ -543,13 +534,14 @@ footer div a {
     margin-bottom: 2vw;
   }
   main h1 {
-    font-size: 7vw;
+    font-size: 25px;
   }
   main h2 {
-    font-size: 5vw;
+    font-size: 18px;
   }
   main p {
-    font-size: 3.5vw;
+    font-size: 15px;
+    margin-top: 15px;
   }
   footer p {
     font-size: small;
@@ -593,6 +585,7 @@ footer div a {
     justify-content: space-evenly;
     flex-wrap: nowrap;
     padding: 1vw;
+    flex-direction: column;
   }
   .contenedortops {
     display: flex;
@@ -600,8 +593,8 @@ footer div a {
     width: 100%;
   }
   .contenedortops button {
-    width: 15vw;
-    height: 10vw;
+    width: 20vw;
+    height: 12vw;
     margin-left: 1vw;
     border-radius: 10px;
   }
@@ -614,6 +607,9 @@ footer div a {
     width: 50vw;
     height: auto;
     object-fit: cover;
+  }
+  .agrupar {
+    height: 185px;
   }
   .listaarticulos {
     font-size: 4vw;
@@ -651,15 +647,7 @@ footer div a {
     height: 230px;
   }
   /*Modificar el tamaño del ancho del extend del texto en tamaños pequeños para tarjetas de yoga en clases*/
-  .bloqueimghorizontal4 .p2horizontal, .bloqueimghorizontal5 .p2horizontal, .bloqueimghorizontal6 .p2horizontal {
-    width: 150px;
-    bottom: 12%;
-    left: 55%;
-  }
   /*Modificar el tamaño del ancho de las imagenes en tamaños pequeños para tarjetas de yoga en clases*/
-  .bloqueimghorizontal4 .imghorizontal, .bloqueimghorizontal4 .imghorizontal2, .bloqueimghorizontal5 .imghorizontal, .bloqueimghorizontal5 .imghorizontal2, .bloqueimghorizontal6 .imghorizontal, .bloqueimghorizontal6 .imghorizontal2 {
-    width: 40%;
-  }
   footer div {
     flex-wrap: wrap;
   }
