--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -58,15 +58,16 @@
         margin-bottom: 2vw;
 
         h1 {
-            font-size: 7vw;
+            font-size: 25px;
         }
 
         h2 {
-            font-size: 5vw;
+            font-size: 18px;
         }
 
         p {
-            font-size: 3.5vw;
+            font-size: 15px;
+            margin-top: 15px;
         }
     }
 
@@ -116,6 +117,7 @@
         justify-content: space-evenly;
         flex-wrap: nowrap;
         padding: 1vw;
+        flex-direction: column;
     }
     .contenedortops {
         display: flex;
@@ -123,8 +125,8 @@
         width: 100%;
 
         button {
-            width: 15vw;
-            height: 10vw;
+            width: 20vw;
+            height: 12vw;
             margin-left: 1vw;
             border-radius: 10px;
 
@@ -141,7 +143,9 @@
             object-fit: cover;
         }
     }
-
+    .agrupar{
+        height: 185px;
+    }
     .listaarticulos {
         font-size: 4vw;
     }
