--- a/scss/estiloscss.scss
+++ b/scss/estiloscss.scss
@@ -10,14 +10,19 @@
 }
 
 /*Variables*/
-$bgcolor1: #fc9dbe;
+$bgcolor1: #faa8c5;
 $bgcolor2: #b7dcfa;
+$bgcolor3:rgb(19, 150, 211);
 
 /*
 $bgcolor1:#fac0d4 ;
 $bgcolor2:#b7dcfa ;
 */
 
+.colornavfooter{
+    background-color: $bgcolor3;
+    color: white;
+}
 
 body {
     font-family: 'Ubuntu', sans-serif;
@@ -54,17 +59,18 @@ body {
 /*Desde aqui se modifica el tamaño de las letras H1 h2 p*/
 div {
     h1 {
-        font-size: 5vw;
+        font-size: 40px;
         text-align: center;
     }
 
     p {
-        font-size: 2.4vw;
+        font-size: 20px;
         text-align: center;
+        width: 99%;
     }
 
     h2 {
-        font-size: 2.8vw;
+        font-size: 25px;
         text-align: center;
     }
 }
@@ -251,7 +257,7 @@ footer div a {
     width: 50%;
 
     button {
-        width: 10vw;
+        width: 9vw;
         height: 5vw;
         margin-left: 1vw;
         background-color: $bgcolor1;
@@ -261,7 +267,7 @@ footer div a {
         a {
             color: rgb(0, 0, 0);
             margin: 0;
-            font-size: 2.5vw;
+            font-size: 20px;
         }
 
         &:hover {
@@ -284,34 +290,10 @@ footer div a {
     background-color: $bgcolor1;
 }
 
-/*Le coloco color de fonto al titulo de joggers en la seccion joggers*/
-.colorfondotitulojogger {
-    background-color: $bgcolor2;
-}
-
-/*Le daré aqui estilo a las imagenes de los tops de ropa*/
-
-/*Contenedor con un color de fondo asignado a los tops de ropa*/
-.contenedortopsbackgroundcolor {
-    background-color: #f7f7f7;
-    /* blanco */
-    background-image: radial-gradient(circle at 20% 50%, #b8e0e9, #b8e0e9 60%, rgba(248, 165, 194, 0.5) 70%, rgba(248, 165, 194, 0.1));
-    /* gradiente radial */
-    padding: 3vw;
-}
-
-/*Contenedor con un color de fondo asignado a los pantalones de ropa*/
-.contenedorpantalonbackgroundcolor {
-    background-color: $bgcolor1;
-    /* rosa claro */
-    background-image: radial-gradient(circle at 20% 50%, rgba(184, 224, 233, 0.1), rgba(184, 224, 233, 0.5) 60%, #b8e0e9 70%, #b8e0e9);
-    /* gradiente radial */
-    padding: 3vw;
-}
 
 /*Clase contenedor que da el borde inferior azul*/
 .contenedormainbordeinferior1 {
-    border-bottom: 50px solid $bgcolor2;
+    border-bottom: 50px solid $bgcolor3;
 }
 
 .contenedormainbordeinferior2 {
@@ -320,6 +302,11 @@ footer div a {
 }
 
 /*Voy a crear la tarjeta para articulos*/
+
+/*Crear una clase para agrupar los objetos en un div de articulos*/
+.agrupar{
+    height: 200px;
+}
 
 /*Boton de articulos*/
 .boton {
@@ -333,7 +320,7 @@ footer div a {
     a {
         color: rgb(0, 0, 0);
         margin: 0;
-        font-size: 2.5vw;
+        font-size: 25px;
     }
 
     &:hover {
@@ -341,29 +328,8 @@ footer div a {
         box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
     }
 }
-
-.boton2 {
-    width: 10vw;
-    height: 5vw;
-    margin-left: 1vw;
-    background-color: $bgcolor2;
-    border-color: #ffffff;
-    border-radius: 10px;
-
-    a {
-        color: rgb(0, 0, 0);
-        margin: 0;
-        font-size: 2.5vw;
-    }
-
-    &:hover {
-        background-color: $bgcolor1;
-        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
-    }
-}
-
 .listaarticulos {
-    font-size: 2vw;
+    font-size: 20px;
 }
 
 .tarjetaarticulos {
@@ -406,6 +372,9 @@ footer div a {
         object-fit: contain;
     }
 }
+.divisioncrecimiento{
+    width: 33%;
+}
 
 /*Estilos de clases*/
 
@@ -424,48 +393,10 @@ footer div a {
 /*Estilos para los bloques que componen la pagina clases*/
 /*Extend de los bloques horizontales clases*/
 %bloqueimghorizontal {
-    display: inline-block;
-    position: relative;
+    display: flex;
     width: 100%;
     height: 500px;
     background-size: cover;
-}
-
-/*Extend para texto dentro del imghorizontal clases*/
-%h2horizontalclases {
-    position: absolute;
-    z-index: 1;
-    color: rgba(0, 0, 0, 0.699);
-    background-color: $bgcolor1;
-    padding: 10px;
-    border: 2px solid $bgcolor1;
-}
-
-/*Extende para los p2 dentro del imghorizontal clases*/
-%p2horizontalclases {
-    position: absolute;
-    z-index: 1;
-    color: rgba(0, 0, 0, 0.699);
-    padding: 10px;
-    width: 400px;
-    bottom: 20%;
-    left: 60%;
-}
-
-/*Extend para las imagenes dentro de imghoriaontal clases*/
-%imghorizontal {
-    position: absolute;
-    z-index: 1;
-    color: rgba(0, 0, 0, 0.699);
-    padding: 10px;
-    width: 30%;
-    border-radius: 50%;
-}
-
-/*Mixin de posiciones relativas bottom left*/
-@mixin posicionesrelativas($bottom,$left){
-    bottom: $bottom;
-    left: $left;
 }
 
 .bloqueimghorizontal2 {
@@ -488,78 +419,104 @@ footer div a {
 
 .bloqueimghorizontal4 {
     @extend %bloqueimghorizontal;
+    align-items: center;
+    justify-content: center;
     background-image: url('../multimedia/imagenes/clases/fondocolor3.jpg');
-
-    .h2horizontal {
-        @extend %h2horizontalclases;
-        @include posicionesrelativas(66%,67%);
+    .divimghorizontal{
+        display: flex;
+        width: 60%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
     }
-
-    .p2horizontal {
-        @extend %p2horizontalclases;  
+    .divimghorizontal2{
+        display: flex;
+        width: 40%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
-
-    .imghorizontal {
-        @extend %imghorizontal;
-        @include posicionesrelativas(10%,26%);
+    a{
+        color:#212529 ;
     }
-
-    .imghorizontal2 {
-        @extend %imghorizontal;
-        @include posicionesrelativas(31%,6%);
+    .imghorizontal{
+        border-radius: 50%;
+        width: 50%;
+        position: relative;
+        left: 10%;
     }
-
+    .imghorizontal2{
+        border-radius: 50%;
+        width: 50%;
+    }
 }
-
 .bloqueimghorizontal5 {
     @extend %bloqueimghorizontal;
+    align-items: center;
+    justify-content: center;
     background-image: url('../multimedia/imagenes/clases/fondocolor4.jpg');
-
-    .h2horizontal {
-        @extend %h2horizontalclases;
-        @include posicionesrelativas(66%,67%);
+    .divimghorizontal{
+        display: flex;
+        width: 60%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
     }
-
-    .p2horizontal {
-        @extend %p2horizontalclases; 
+    .divimghorizontal2{
+        display: flex;
+        width: 40%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
-
-    .imghorizontal {
-        @extend %imghorizontal;
-        @include posicionesrelativas(10%,26%);
+    a{
+        color:#212529 ;
     }
-
-    .imghorizontal2 {
-        @extend %imghorizontal;
-        @include posicionesrelativas(31%,6%);
-        bottom: 31%;
-        left: 6%;
+    .imghorizontal{
+        border-radius: 50%;
+        width: 50%;
+        position: relative;
+        left: 10%;
     }
-
+    .imghorizontal2{
+        border-radius: 50%;
+        width: 40%;
+    }
 }
-
 .bloqueimghorizontal6 {
     @extend %bloqueimghorizontal;
+    align-items: center;
+    justify-content: center;
     background-image: url('../multimedia/imagenes/clases/fondocolor5.jpg');
-
-    .h2horizontal {
-        @extend %h2horizontalclases;
-        @include posicionesrelativas(66%,67%);
+    .divimghorizontal{
+        display: flex;
+        width: 60%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
     }
-
-    .p2horizontal {
-        @extend %p2horizontalclases;
+    .divimghorizontal2{
+        display: flex;
+        width: 40%;
+        height: auto;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
-
-    .imghorizontal {
-        @extend %imghorizontal;
-        @include posicionesrelativas(2%,26%);
+    a{
+        color:#212529 ;
     }
-
-    .imghorizontal2 {
-        @extend %imghorizontal;
-        @include posicionesrelativas(20%,6%);
-        bottom: 20%;
+    .imghorizontal{
+        border-radius: 50%;
+        width: 50%;
+        position: relative;
+        left: 10%;
+    }
+    .imghorizontal2{
+        border-radius: 50%;
+        width: 50%;
     }
 }
 @import "mediaqueries";
